# icfp2024

./: .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  LICENSE  MODULE.bazel  README.md  compose.yml  pyo3_build_config.txt  requirements.txt  requirements_lock_3_12.txt
3d/: info.txt
icfp_lang/: BUILD.bazel  aray.py  language.py  service.py  strings.py  terminal.py
lambdaman/: info.txt  lambdaman.py  solution3.txt  solution4.txt  solution5.txt
misc/: BUILD.bazel  SUBMISSION_HEADER.txt
problems/: BUILD.bazel
problems/3d/: BUILD.bazel  info.txt  solution1.txt  solution3.txt  solution4.txt  solution5.txt  test.py
problems/efficiency/: .gitignore  efficiency1.scm  efficiency10.scm  efficiency11.scm  efficiency12.scm  efficiency2.scm  efficiency3.scm  efficiency4.scm  efficiency5.scm  efficiency6.scm  efficiency7.scm  efficiency8.scm  efficiency9.scm  trans.py
problems/lambdaman/: .gitignore  download.py  gen_level10.py  info.txt  lambdaman.py  level20.txt  level21.icfp  new_solution9.txt  rewrite.py  solution10.txt  solution11.txt  solution12.txt  solution13.txt  solution14.txt  solution15.txt  solution17.txt  solution18.txt  solution19.txt  solution20.txt  solution3.txt  solution7.txt  solution9.txt  trans.py
problems/language_test/: again.py  alang.py  alang_old.py  blocky.icfp  l3ng.py  l4ng.py  l5ng.py  lang_tree.py  language_test.py  manual.txt  rewrite.py  rewrite.scm  thre.py  tworee.py
problems/spaceship/: BUILD.bazel  README.md  chunkify.py  download.py  flight_sim.py  get_over_here.py  info.txt  myenik.py  myenik_route.py  rendership.py  route1.txt  route10.txt  route11.txt  route2.txt  route3.txt  route4.txt  route5.txt  route6.txt  route7.txt  route8.txt  route9.txt  solution10.txt  solution11.txt  solution12.txt  solution13.txt  solution14.txt  solution15.txt  solution16.txt  solution17.txt  solution18.txt  solution19.txt  solution2.txt  solution20.txt  solution21.txt  solution22.txt  solution3.txt  solution4.txt  solution5.txt  solution6.txt  solution7.txt  (+6 more)
rust_example/: BUILD.bazel
rust_parser/: BUILD.bazel  Cargo.toml  icfp.pest  trampoline.py
rust_parser/src/: ast.rs  executor.rs  lib.rs  parser.rs
spaceship/: info.txt  solution14.txt  solution15.txt  solution17.txt  solution18.txt  solution19.txt  solution3.txt  solution4.txt  solution7.txt  solution8.txt  spaceship.py
tests/: BUILD.bazel  inputs.icfp  outputs.txt
threed/: BUILD.bazel  solve3d.py  submit.py  test.txt  threedlang.py
tools/: BUILD.bazel
