load("@pip//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "icfp_py",
    srcs = glob(["*.py"]),
    deps = [
        requirement("requests"),
    ],
    data = ["//misc:SUBMISSION_HEADER.txt"],
)

py_binary(
    name = "mooc_terminal",
    main = "terminal.py",
    srcs = ["terminal.py"],
    deps = [
        ":icfp_py",
    ]
)
