load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_binary(
    name = "rust_parser",
    srcs = ["src/bin/rust_parser.rs"],
    data = [
        ":icfp.pest",
    ],
    deps = [
        "@crate_index//:anyhow",
        "@crate_index//:clap",
        "@crate_index//:pest",
        "@crate_index//:thiserror",
    ],
    proc_macro_deps = [
        "@crate_index//:pest_derive",
    ],
)
