load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "rust_parser",
    srcs = glob(["src/**/*.rs"], exclude=["src/bin/*"]),
    data = [
        ":icfp.pest",
    ],
    deps = [
        "@crate_index//:anyhow",
        "@crate_index//:clap",
        "@crate_index//:lazy_static",
        "@crate_index//:pest",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:thiserror",
    ],
    proc_macro_deps = [
        "@crate_index//:pest_derive",
    ],
)

rust_binary(
    name = "parser",
    srcs = ["src/bin/rust_parser.rs"],
    deps = [
        ":rust_parser",
    ] + [
        "@crate_index//:anyhow",
        "@crate_index//:clap",
        "@crate_index//:pest",
        "@crate_index//:thiserror",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
    ],
)

rust_test(
    name = "parser_test",
    crate = ":rust_parser",
    data = [
        ":icfp.pest",
        "//tests:icfp_testcases",
    ],
    deps = [
        "@crate_index//:anyhow",
        "@crate_index//:clap",
        "@crate_index//:lazy_static",
        "@crate_index//:pest",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:thiserror",
    ],
    proc_macro_deps = [
        "@crate_index//:pest_derive",
    ],
)
