load("@pip//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "threedlang",
    srcs = [
        "threedlang.py",
    ],
    deps = [
        requirement('numpy'),
        requirement('tabulate'),
    ],
)

py_binary(
    name = "solve3d",
    main = "solve3d.py",
    data = [
        "//problems:3d",
        "test.txt",
    ],
    srcs = ["solve3d.py"],
    deps = [
        ":threedlang",
    ]
)

py_binary(
    name = "submit",
    main = "submit.py",
    srcs = ["submit.py"],
    deps = [
        "//icfp_lang:icfp_py",
    ]
)
