load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
load("@pip//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_console_script_binary(
    name = "icfp_ipython",
    pkg = "@pip//ipython",
    script = "ipython",
    deps = [
        "//icfp_lang:icfp_py",
        "//rust_parser:rust_parser_py",
    ] + [
        requirement('requests'),
    ],
)
